--- a/feladat.html
+++ b/feladat.html
@@ -1,11 +1,11 @@
-<b>start</b> - 2023.01.17 17:25:36<br />
+<b>start</b> - 2023.01.18 01:10:12<br />
 Slovakia_Giraffe, not updated, 0.6000000000000085<br />
 Germany_EventPin kihagyva (100%), <br />
 Germany_TresorICELimburg, not updated, 0.0<br />
 USA_PrattvilleTrillium, not updated, 0.0<br />
 Netherlands_EvolutionBeeckestijn kihagyva (100%), <br />
 Hungary_TatabanyaBlackhole, not updated, 0.5399999999999991<br />
-Hungary_VotiveChurch, not updated, -36.63000000000001<br />
+Hungary_VotiveChurch, not updated, -36.84<br />
 Germany_WappenHalberstadt, not updated, 0.0<br />
 UnitedKingdom_SouthStoke, not updated, 0.6800000000000068<br />
 Slovakia_ChristmasStable kihagyva (100%), <br />
@@ -150,7 +150,7 @@ Canada_HalloweenInOttawa kihagyva (100%), <br />
 Slovakia_HungryBatTerry kihagyva (100%), <br />
 USA_LakevillesSeaTurtle kihagyva (100%), <br />
 USA_LightningBoltInSapphire kihagyva (100%), <br />
-USA_AppleValley-EvolutionaryFlower, not updated, 0.0<br />
+USA_AppleValley-EvolutionaryFlower, not updated, 0.20000000000000284<br />
 Germany_Bullseye kihagyva (100%), <br />
 Finland_TampereElectric, not updated, 0.332225913621258<br />
 USA_MontgomeryBaseball kihagyva (100%), <br />
@@ -587,84 +587,11 @@ USA_StPaulShamrock kihagyva (100%), <br />
 USA_BirthdayClown kihagyva (100%), <br />
 USA_LongLakeButterflies kihagyva (100%), <br />
 USA_FleurDeLis, not updated, 0.0<br />
-USA_HutchinsonSnowflake, <b>updated</b>, 120, <a href="https://www.munzee.com/map/9zuzkev75/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_HutchinsonSnowflake.json" target="_blank">json</a> <b>100%</b><br />
-USA_RochestersCornWaterTower, <b>updated</b>, 227, <a href="https://www.munzee.com/map/9zy62tt99/16.1" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_RochestersCornWaterTower.json" target="_blank">json</a><br />
-USA_DuluthAnchor, <b>updated</b>, 74, <a href="https://www.munzee.com/map/cbqd308e5/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_DuluthAnchor.json" target="_blank">json</a> <b>100%</b><br />
-USA_SunFlake, <b>updated</b>, 278, <a href="https://www.munzee.com/map/cbq3yt42q/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_SunFlake.json" target="_blank">json</a><br />
-USA_PrescottCardinals, <b>updated</b>, 93, <a href="https://www.munzee.com/map/9zyn8e7ff/15.6" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_PrescottCardinals.json" target="_blank">json</a><br />
-Denmark_AgricultureFieldInHilleroed, <b>updated</b>, 93, <a href="https://www.munzee.com/map/u3by0nen4/15.9" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Denmark_AgricultureFieldInHilleroed.json" target="_blank">json</a><br />
-----csoportok<br />
-USA_ComoParkShamrock, <b>updated</b>, <a href="https://www.munzee.com/map/9zvzb7crp/15.4" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_ComoParkShamrock.json" target="_blank">json</a><br />
-----városok<br />
-Denmark_city_Hilleroed, <b>updated</b>, <a href="https://www.munzee.com/map/u3bwrbnce/14.999" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Denmark_city_Hilleroed.json" target="_blank">json</a><br />
-USA_city_Minneapolis, <b>updated</b>, <a href="https://www.munzee.com/map/9zvxy0n58/14.999" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_city_Minneapolis.json" target="_blank">json</a><br />
-----felhasználók<br />
-geomatrix_all, <b>updated</b>, <a href="https://www.munzee.com/map/9zvxmdpr9/15.000" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/geomatrix_all.json" target="_blank">json</a><br />
-geomatrix_completed, <b>updated</b>, <a href="https://www.munzee.com/map/9zvxy0n58/15.001" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/geomatrix_completed.json" target="_blank">json</a><br />
-----témák<br />
-----felhasználók update<br />
-geomatrix_all, <b>updated</b>, <a href="https://www.munzee.com/map/9zvxmdpr9/15.000" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/geomatrix_all.json" target="_blank">json</a><br />
-geomatrix_GOTM, <b>updated</b>, <a href="https://www.munzee.com/map/9zvxjfwnt/15.001" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/geomatrix_GOTM.json" target="_blank">json</a><br />
-geomatrix_completed, <b>updated</b>, <a href="https://www.munzee.com/map/9zvxy0n58/15.001" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/geomatrix_completed.json" target="_blank">json</a><br />
-squirreledaway_all, <b>updated</b>, <a href="https://www.munzee.com/map/9zvwq5uf3/15.000" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/squirreledaway_all.json" target="_blank">json</a><br />
-squirreledaway_completed, <b>updated</b>, <a href="https://www.munzee.com/map/9zvwrj4rs/15.001" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/squirreledaway_completed.json" target="_blank">json</a><br />
-squirreledaway_empty, <b>updated</b>, <a href="https://www.munzee.com/map/9zvwqtjtx/15.001" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/squirreledaway_empty.json" target="_blank">json</a><br />
-Neloras_all, <b>updated</b>, <a href="https://www.munzee.com/map/u2s1yt9t7/15.0001" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Neloras_all.json" target="_blank">json</a><br />
-Neloras_GOTM, <b>updated</b>, <a href="https://www.munzee.com/map/u2s1zefpc/15.0011" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Neloras_GOTM.json" target="_blank">json</a><br />
-Neloras_completed, <b>updated</b>, <a href="https://www.munzee.com/map/u2s1v068r/15.0011" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Neloras_completed.json" target="_blank">json</a><br />
-Neloras_empty, <b>updated</b>, <a href="https://www.munzee.com/map/u2s1vzfpn/15.0011" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Neloras_empty.json" target="_blank">json</a><br />
-123xilef_all, <b>updated</b>, <a href="https://www.munzee.com/map/u33de1r9d/15.000" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/123xilef_all.json" target="_blank">json</a><br />
-123xilef_GOTM, <b>updated</b>, <a href="https://www.munzee.com/map/u336vvjuz/15.001" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/123xilef_GOTM.json" target="_blank">json</a><br />
-123xilef_completed, <b>updated</b>, <a href="https://www.munzee.com/map/u336z06cn/15.001" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/123xilef_completed.json" target="_blank">json</a><br />
-123xilef_empty, <b>updated</b>, <a href="https://www.munzee.com/map/u336tzs18/15.001" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/123xilef_empty.json" target="_blank">json</a><br />
-Rikitan_all, <b>updated</b>, <a href="https://www.munzee.com/map/u2s1vv279/15.0002" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Rikitan_all.json" target="_blank">json</a><br />
-Rikitan_GOTM, <b>updated</b>, <a href="https://www.munzee.com/map/u2s1vx5xv/15.0012" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Rikitan_GOTM.json" target="_blank">json</a><br />
-Rikitan_completed, <b>updated</b>, <a href="https://www.munzee.com/map/u2s1vyxmx/15.0012" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Rikitan_completed.json" target="_blank">json</a><br />
-Rikitan_empty, <b>updated</b>, <a href="https://www.munzee.com/map/u2s1yxmhk/15.0012" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Rikitan_empty.json" target="_blank">json</a><br />
-markayla_all, <b>updated</b>, <a href="https://www.munzee.com/map/9zqz5c5fx/15.000" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/markayla_all.json" target="_blank">json</a><br />
-markayla_GOTM, <b>updated</b>, <a href="https://www.munzee.com/map/9zqz5dsj1/15.001" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/markayla_GOTM.json" target="_blank">json</a><br />
-markayla_completed, <b>updated</b>, <a href="https://www.munzee.com/map/9zqz5cxxw/15.001" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/markayla_completed.json" target="_blank">json</a><br />
-markayla_empty, <b>updated</b>, <a href="https://www.munzee.com/map/9zw3b0pd4/15.001" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/markayla_empty.json" target="_blank">json</a><br />
-llamah_empty, <b>updated</b>, <a href="https://www.munzee.com/map/9zmk6nyww/15.0011" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/llamah_empty.json" target="_blank">json</a><br />
-PeachesnCream_empty, <b>updated</b>, <a href="https://www.munzee.com/map/9zmk6hw2m/15.0012" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/PeachesnCream_empty.json" target="_blank">json</a><br />
-BenandJules_all, <b>updated</b>, <a href="https://www.munzee.com/map/gcrj5dn8x/15.000" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/BenandJules_all.json" target="_blank">json</a><br />
-BenandJules_GOTM, <b>updated</b>, <a href="https://www.munzee.com/map/gcrj5dn8x/15.001" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/BenandJules_GOTM.json" target="_blank">json</a><br />
-BenandJules_completed, <b>updated</b>, <a href="https://www.munzee.com/map/gcrmvk8te/15.001" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/BenandJules_completed.json" target="_blank">json</a><br />
-Bonn_all, <b>updated</b>, <a href="https://www.munzee.com/map/u1j02nz06/15.000" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Bonn_all.json" target="_blank">json</a><br />
-Bonn_GOTM, <b>updated</b>, <a href="https://www.munzee.com/map/u1hbrymvt/15.001" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Bonn_GOTM.json" target="_blank">json</a><br />
-Bonn_completed, <b>updated</b>, <a href="https://www.munzee.com/map/u1j09d1xz/15.001" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Bonn_completed.json" target="_blank">json</a><br />
-BonnieB1_all, <b>updated</b>, <a href="https://www.munzee.com/map/r7hug0cqd/15.0001" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/BonnieB1_all.json" target="_blank">json</a><br />
-BonnieB1_GOTM, <b>updated</b>, <a href="https://www.munzee.com/map/r7h6ewegy/15.001" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/BonnieB1_GOTM.json" target="_blank">json</a><br />
-BonnieB1_completed, <b>updated</b>, <a href="https://www.munzee.com/map/r7hg9jecp/15.001" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/BonnieB1_completed.json" target="_blank">json</a><br />
-BonnieB1_empty, <b>updated</b>, <a href="https://www.munzee.com/map/r7hu62k18/15.001" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/BonnieB1_empty.json" target="_blank">json</a><br />
-HiTechMD_completed, <b>updated</b>, <a href="https://www.munzee.com/map/dqctwugjz/15.001" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/HiTechMD_completed.json" target="_blank">json</a><br />
-Marnic_completed, <b>updated</b>, <a href="https://www.munzee.com/map/u1766fj3h/15.001" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Marnic_completed.json" target="_blank">json</a><br />
-NikitaStolk_completed, <b>updated</b>, <a href="https://www.munzee.com/map/u1khd5y3q/15.0011" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/NikitaStolk_completed.json" target="_blank">json</a><br />
-Norbee97_all, <b>updated</b>, <a href="https://www.munzee.com/map/u2mw30kw9/15.000" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Norbee97_all.json" target="_blank">json</a><br />
-Norbee97_completed, <b>updated</b>, <a href="https://www.munzee.com/map/u2rqk7rjj/15.001" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Norbee97_completed.json" target="_blank">json</a><br />
-Norbee97_empty, <b>updated</b>, <a href="https://www.munzee.com/map/u2rq7fsvq/15.001" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Norbee97_empty.json" target="_blank">json</a><br />
-paupau_GOTM, <b>updated</b>, <a href="https://www.munzee.com/map/u1q0145hh/15.001" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/paupau_GOTM.json" target="_blank">json</a><br />
-Roger6102_completed, <b>updated</b>, <a href="https://www.munzee.com/map/u1h4tr7p2/15.001" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Roger6102_completed.json" target="_blank">json</a><br />
-purplecourgette_GOTM, <b>updated</b>, <a href="https://www.munzee.com/map/gcr8h8ghq/15.000" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/purplecourgette_GOTM.json" target="_blank">json</a><br />
-RePe_all, <b>updated</b>, <a href="https://www.munzee.com/map/u6zb1ebg3/15.0001" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/RePe_all.json" target="_blank">json</a><br />
-RePe_GOTM, <b>updated</b>, <a href="https://www.munzee.com/map/u6zb1ebg3/15.0011" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/RePe_GOTM.json" target="_blank">json</a><br />
-RePe_empty, <b>updated</b>, <a href="https://www.munzee.com/map/u6xzu1e7e/15.0011" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/RePe_empty.json" target="_blank">json</a><br />
-Peter1980_all, <b>updated</b>, <a href="https://www.munzee.com/map/gcpsywswp/15.000" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Peter1980_all.json" target="_blank">json</a><br />
-Peter1980_completed, <b>updated</b>, <a href="https://www.munzee.com/map/gcpsyt1y9/15.001" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Peter1980_completed.json" target="_blank">json</a><br />
-Peter1980_empty, <b>updated</b>, <a href="https://www.munzee.com/map/gcpsykxuu/15.001" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Peter1980_empty.json" target="_blank">json</a><br />
-tartu61_all, <b>updated</b>, <a href="https://www.munzee.com/map/udc8udkum/15.0001" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/tartu61_all.json" target="_blank">json</a><br />
-tartu61_GOTM, <b>updated</b>, <a href="https://www.munzee.com/map/udc8udkum/15.0011" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/tartu61_GOTM.json" target="_blank">json</a><br />
-tartu61_empty, <b>updated</b>, <a href="https://www.munzee.com/map/udc8vwrpv/15.0011" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/tartu61_empty.json" target="_blank">json</a><br />
-tcguru_all, <b>updated</b>, <a href="https://www.munzee.com/map/u6zb1ebg3/15.0002" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/tcguru_all.json" target="_blank">json</a><br />
-tcguru_GOTM, <b>updated</b>, <a href="https://www.munzee.com/map/u6zb1ebg3/15.0012" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/tcguru_GOTM.json" target="_blank">json</a><br />
-tcguru_empty, <b>updated</b>, <a href="https://www.munzee.com/map/u6xzu1e7e/15.0012" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/tcguru_empty.json" target="_blank">json</a><br />
-tlmeadowlark_completed, <b>updated</b>, <a href="https://www.munzee.com/map/dnhdug6cs/15.001" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/tlmeadowlark_completed.json" target="_blank">json</a><br />
-WandelKuub_completed, <b>updated</b>, <a href="https://www.munzee.com/map/u1h33v2d4/15.001" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/WandelKuub_completed.json" target="_blank">json</a><br />
-zsomborpeto_all, <b>updated</b>, <a href="https://www.munzee.com/map/u2nr4fkzr/15.000" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/zsomborpeto_all.json" target="_blank">json</a><br />
-zsomborpeto_GOTM, <b>updated</b>, <a href="https://www.munzee.com/map/u2nr4fkzr/15.001" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/zsomborpeto_GOTM.json" target="_blank">json</a><br />
-zsomborpeto_completed, <b>updated</b>, <a href="https://www.munzee.com/map/u2mqx8zje/15.001" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/zsomborpeto_completed.json" target="_blank">json</a><br />
-volki2000_all, <b>updated</b>, <a href="https://www.munzee.com/map/u0wn8q7u2/15.000" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/volki2000_all.json" target="_blank">json</a><br />
-volki2000_GOTM, <b>updated</b>, <a href="https://www.munzee.com/map/u0wn8q7u2/15.001" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/volki2000_GOTM.json" target="_blank">json</a><br />
-volki2000_empty, <b>updated</b>, <a href="https://www.munzee.com/map/u0tyyfy7z/15.001" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/volki2000_empty.json" target="_blank">json</a><br />
-<b>stop</b> - 2023.01.17 18:06:39<br />
-összesen 2462<br />
+USA_HutchinsonSnowflake kihagyva (100%), <br />
+USA_RochestersCornWaterTower, not updated, 0.0<br />
+USA_DuluthAnchor kihagyva (100%), <br />
+USA_SunFlake, not updated, 0.0<br />
+USA_PrescottCardinals, not updated, 0.0<br />
+Denmark_AgricultureFieldInHilleroed, not updated, 0.0<br />
+<b>stop</b> - 2023.01.18 01:31:27<br />
+összesen 1274<br />
