--- a/feladat.html
+++ b/feladat.html
@@ -1,11 +1,11 @@
-<b>start</b> - 2023.01.30 01:10:12<br />
+<b>start</b> - 2023.01.31 01:10:13<br />
 Slovakia_Giraffe, not updated, 0.6000000000000085<br />
 Germany_EventPin kihagyva (100%), <br />
 Germany_TresorICELimburg, not updated, 0.14792899408284654<br />
 USA_PrattvilleTrillium, not updated, 0.0<br />
 Netherlands_EvolutionBeeckestijn kihagyva (100%), <br />
 Hungary_TatabanyaBlackhole, not updated, 0.0<br />
-Hungary_VotiveChurch, not updated, -36.07000000000001<br />
+Hungary_VotiveChurch, not updated, -36.330000000000005<br />
 Germany_WappenHalberstadt, not updated, 0.0<br />
 UnitedKingdom_SouthStoke, not updated, 0.6800000000000068<br />
 Slovakia_ChristmasStable kihagyva (100%), <br />
@@ -51,7 +51,7 @@ Spain_PalmaDeMallorca-OfficialFlag, not updated, 0.0<br />
 Switzerland_GiddyUpGo, not updated, 1.0<br />
 Belgium_KnokkeHeist, not updated, 0.5<br />
 Hungary_Evolution, not updated, 0.9722222222222143<br />
-Netherlands_WapenVanEnkhuizen, not updated, 1.0<br />
+Netherlands_WapenVanEnkhuizen, <b>hiba (megváltozott a táblázat felépítése?)</b><br />
 USA_OfficerDown, not updated, 0.0<br />
 Hungary_Brigetio, not updated, 0.3846153846153797<br />
 Hungary_GoatInKecskemet, not updated, 0.6999999999999886<br />
@@ -175,7 +175,7 @@ Germany_SkylarkFeldlerche kihagyva (100%), <br />
 Netherlands_MysteryBikeField kihagyva (100%), <br />
 Australia_Brisbane, not updated, 0.0<br />
 Australia_EgyptianMask kihagyva (100%), <br />
-Germany_BerlinMunzeePin, not updated, 0.20000000000000284<br />
+Germany_BerlinMunzeePin, not updated, 0.3400000000000034<br />
 Germany_DiamantBerlin, not updated, 0.0<br />
 Germany_BerlinBear, not updated, 0.0<br />
 Germany_HonowWappen, not updated, 0.3355704697986539<br />
@@ -274,7 +274,7 @@ Canada_JeffsFarm kihagyva (100%), <br />
 UnitedKingdom_TheYellowSubmarine kihagyva (100%), <br />
 Germany_JohnTheFab41 kihagyva (100%), <br />
 Germany_RingoTheFab4, not updated, 0.0<br />
-Germany_GeorgeTheFab42, <b>updated</b>, 802, <a href="https://www.munzee.com/map/u0w7yp6un/15.4" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Germany_GeorgeTheFab42.json" target="_blank">json</a><br />
+Germany_GeorgeTheFab42, not updated, 0.0<br />
 Germany_PaulTheFab43, not updated, 0.29000000000000625<br />
 Hungary_AlsogallaJoyPrize, not updated, 0.0<br />
 Hungary_MaXGarden kihagyva (100%), <br />
@@ -669,10 +669,5 @@ UnitedKingdom_HMSVictory, not updated, 0.0<br />
 UnitedKingdom_RetroBunzee kihagyva (100%), <br />
 UnitedKingdom_DenverWindmill kihagyva (100%), <br />
 Canada_AdventureGardenForBluestreek kihagyva (100%), <br />
-----csoportok<br />
-----városok<br />
-----felhasználók<br />
-----témák<br />
-Germany_topic_TheFABInTubingen, <b>updated</b>, <a href="https://www.munzee.com/map/u0w7vzm9n/14.998" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Germany_topic_TheFABInTubingen.json" target="_blank">json</a><br />
-<b>stop</b> - 2023.01.30 01:48:33<br />
-összesen 2301<br />
+<b>stop</b> - 2023.01.31 01:33:53<br />
+összesen 1420<br />
